[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-llm-guard"
version = "0.1.0-alpha"
description = "Secure middleware for processing clinical records with LLMs"
authors = [
  { name="Hongfei Dong", email="hongfei@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "openai>=1.0"
]

[project.urls]
"Homepage" = "https://github.com/donghongfei/Clinical-LLM-Guard"
"Bug Tracker" = "https://github.com/donghongfei/Clinical-LLM-Guard/issues"
